reference-llvm/tests/should-fail/fail21.mu
// shadowing

x = 7;

function @entry foo() {
    ;
}

function bar(x) {
    x;
}
